--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -84,7 +84,7 @@
                                                 {{ family.actualVersion }}
                                                 </span>
                                                 <div class="input-group d-flex flex-nowrap text-break overflow-hidden actualVersion-update-form">
-                                                    <input class="comment_update_input actualVersion_update_input border border-0" style="background-color:rgb(236, 236, 236);" type="text" name="nm" value="">
+                                                    <input class="actualVersion_update_input border border-0" style="background-color:rgb(236, 236, 236);" type="text" name="nm" value="">
                                                     <button class="actualVersion_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{family.id}}"><i class="fa-solid fa-check"></i></button>
                                                 </div>
                                                 
