--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
         <form method="post" class="text-center row d-flex flex-column align-items-center justify-content-around mt-2 mb-2 mt-sm-2 mb-sm-2 pb-3 pt-1 px-sm-5 px-3 login">
         -->
         <form method="post" class="text-center row d-flex flex-column align-items-center justify-content-around login">
-            <div class="w-50" style="margin-top: 1em; padding-bottom: 2em;">
+            <div class="w-75 d-flex flex-column align-items-center justify-content-around" style="margin-top: 1em; padding-bottom: 2em;">
                 <span class="fa-stack fa-3x" style="position: relative; top: -40px;">
                     <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
                     <i class="fa-regular fa-user fa-stack-1x fa-inverse" style="text-shadow: 2px 2px 2px rgba(0,0,0,0.5);"></i>
@@ -35,13 +35,13 @@
                     </div>
                 {% endif %}
 
-                <div class="form-outline mb-1">
+                <div class="form-outline mb-1 w-100">
                     <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
                     <input type="text" placeholder="{{ 'Email'|trans }}" name="username" id="inputUsername" class="form-control" required autofocus>
                     </div>
                 </div>
-                <div class="form-outline">
+                <div class="form-outline w-100">
                     <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
                     <input type="password" placeholder="{{ 'Password'|trans }}" name="password" id="inputPassword" class="form-control" required>
@@ -66,14 +66,14 @@
                 </div>
                 
 
-                <button class="btn btn-justify bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-100" type="submit">
+                <button class="btn btn-justify bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-50" type="submit">
                 {{ 'Sign in'|trans }}
                 <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg>
                 </button>
                 <div class="divider d-flex align-items-center mb-1">
                     {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                 </div>
-                <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
+                <div class="d-flex justify-content-around align-items-center w-50 p-0 flex-wrap">
                     <p class="mb-0 text-break text-nowrap mb-1">{{ 'Not registered yet ?'|trans }}</p>
                     <a class="btn btn-justify btn-secondary txt-white text-break text-nowrap mb-1 w-100" href="{{ path('app_register') }}">{{ 'Sign Up'|trans }}<svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                 </div>
