--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
         <img src="{{ asset('img/winback-logo.webp') }}" class="img-fluid" alt="">
     </div>
     -->
-    <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 d-flex justify-content-center">
+    <div class="col-md-8 col-lg-6 col-xl-4 d-flex justify-content-center">
         <!--
         <form method="post" class="text-center row d-flex flex-column align-items-center justify-content-around mt-2 mb-2 mt-sm-2 mb-sm-2 pb-3 pt-1 px-sm-5 px-3 login">
         -->
