--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -52,7 +52,7 @@
                 <input type="hidden" name="_csrf_token"
                     value="{{ csrf_token('authenticate') }}"
                 >
-                <div class="d-flex justify-content-around align-items-center text-center flex-wrap">
+                <div class="d-flex justify-content-around align-items-center text-center flex-wrap w-100">
                     
                     <div class="checkbox" style="margin-bottom: 0.5em; margin-top: 0.5em;">
                         <label>
