--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -87,7 +87,8 @@
             {% if clientIdentified %}
             You are identified, well done !
             {% for client in clientIdentified %}
-                {{client.serialNumber}}
+                
+                {#{{client.serialNumber}}#}
                 
             {% endfor %}
             {% else %}
