--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -545,3 +545,8 @@ background: #eee;
         border: 1px solid #ced4da;
     }
 }
+
+.btn-left {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
