--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="d-flex flex-column justify-content-between align-items-center mx-0 px-0 w-100 mt-1">
             <div class="row w-100 h-100 mt-4">
-                <div class="col-md-3 d-flex align-items-center justify-content-center">
+                <div class="col-md-3 d-flex vh-100 justify-content-center sticky-scroll">
                     {% include "device/_filter.html.twig" %}
                 </div>
                 <!-- ===== DEVICE TABLE ===== -->
@@ -68,12 +68,24 @@
                                         <th></th>
                                         <th id='test_zone_0'>
                                             {% if is_granted("ROLE_SAV")%}
+                                                
                                                 {{ form_start(versionform) }}
                                                     <div class="input-group d-flex flex-nowrap align-items-stretch justify-content-center">
-                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: 3em; height: 100%;'}})}}
+                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: fit-content; height: 100%;'}})}}
                                                     <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
                                                     </div>
                                                 {{ form_end(versionform) }}
+                                                
+                                                {#
+                                                    <div class="input-group">
+                                                        <textarea class="form-control" name="" id="version_input" cols="10" rows="1"></textarea>
+                                                        <button type="button" class="text-center btn bg-orange btn-outline-orange" id="version_button">
+                                                        <i class="fa-solid fa-check fa-2xs"></i>
+                                                        </button>
+                                                    </div>
+                                                #}
+
+
                                             {% endif %}
                                         </th>
                                         <th></th>
@@ -116,9 +128,15 @@
                                             </td>
                                             {% if is_granted("ROLE_GOE")%}
                                             <td class="text-center">
+                                            {% if download_link == true %}
                                                 <a download href="{{ asset(ressource_path  ~ 'logs/' ~ device.deviceFamily ~ '/' ~ device.logFile) }}">
                                                 <i class="fa-solid fa-download"></i>
                                                 </a>
+                                            {% else %}
+                                                <a href="" data-toggle="tooltip" data-placement="bottom" title="No log !">
+                                                <i class="fa-solid fa-download"></i>
+                                                </a>
+                                            {% endif %} 
                                             </td>
                                             {% endif %}
                                             <!-- forced -->
@@ -136,14 +154,15 @@
                                                 </a>
                                             </td>
                                             {% if is_granted("ROLE_GOE") %}
-                                            <td class="p-0 px-1">
-                                                <input class="comment_input border border-0" style="background-color:#f1874144; height: 2em;" type="text" name="nm" value="{{device.comment}}" data-id="{{device.id}}">
-                                                <div class="overflow-hidden comment-form">
-                                                    
-                                                    <!--
-                                                    <button class="comment_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{device.id}}"><i class="fa-solid fa-check"></i></button> 
-                                                    -->
-                                                </div> 
+                                            <td class="text-center">
+                                            <div class="input-group d-flex flex-nowrap text-break overflow-auto">
+                                                <textarea class="comment_input border border-0" style="background-color:#ffffff; height: 100%;" type="text" name="nm" value="" data-id="{{device.id}}">
+                                                {{device.comment}}
+                                                </textarea>
+                                                <!--<div class="overflow-hidden comment-form">-->  
+                                                <button class="comment_button btn btn-dark border-0 btn-left" type="button" name="name" value="" data-id="{{device.id}}"><i class="fa-solid fa-check"></i></button>
+                                                <!--</div>-->
+                                            </div>
                                             </td>
                                             {% endif %}
                                         </tr>
