--- a/templates/device/_filter.html.twig
+++ b/templates/device/_filter.html.twig
@@ -1,6 +1,6 @@
 {#{{ form_start(form, {attr: { id: 'filter', class: 'sticky-scroll'}}) }}#}
 {#{{ form_start(form, {attr: { id: 'filter',  style: "position: fixed; width: 100;"}}) }}#}
-{{ form_start(form, {attr: { id: 'filter', style: "width: fit-content;", class: "sticky-scroll"}}) }}
+{{ form_start(form, {attr: { id: 'filter', style: "width: fit-content;", class: ""}}) }}
     <div class="input-group flex-nowrap">
     <span class="input-group-text mb-3" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; background-color: white;'>
     <i class="fa-solid fa-magnifying-glass"></i>
