--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -156,7 +156,7 @@
                                             {% if is_granted("ROLE_GOE") %}
                                             <td class="text-center">
                                             <div class="input-group d-flex flex-nowrap text-break overflow-auto">
-                                                <textarea class="comment_input border border-0" style="background-color:#ffffff; height: 100%;" type="text" name="nm" value="" data-id="{{device.id}}">
+                                                <textarea class="comment_input border border-0" style="background-color:#ffffff; height: 100%;" type="text" name="nm" data-id="{{device.id}}">
                                                 {{device.comment}}
                                                 </textarea>
                                                 <!--<div class="overflow-hidden comment-form">-->  
