--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -54,7 +54,7 @@
                                                                         
                                             {{ form_start(checkform) }}
                                                 <div class="row">
-                                                    <div class="col form-field form-inline">
+                                                    <div class="col form-field form-inline text-center">
                                                         {{ form_row(checkform.check, {'id' : "checkbox_0"}) }}
                                                     </div>
                                                 </div>
@@ -72,7 +72,7 @@
                                                 {{ form_start(versionform) }}
                                                     <div class="input-group d-flex flex-nowrap align-items-stretch justify-content-center">
                                                     {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: fit-content; height: 100%;'}})}}
-                                                    <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
+                                                    <button type="submit" class="text-center btn bg-orange btn-outline-orange" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
                                                     </div>
                                                 {{ form_end(versionform) }}
                                                 
@@ -103,7 +103,6 @@
                                         <tr scope="row" class="w-100">
                                             <td class="text-center">
                                                 <div class="form-field text-center align-middle">
-                                                <label class="form-check text-center align-middle">
                                                 {% if is_granted("ROLE_SAV")%}
                                                     <input type="checkbox" 
                                                     id="checkbox_{{device.id}}" 
@@ -111,7 +110,6 @@
                                                     name="checkbox_item" 
                                                     class="form-check-input device-check" {{ (device.selected)? 'checked': ''}}/>
                                                 {% endif %}
-                                                </label>
                                                 </div>
                                             </td>
                                             <td class="text-center text-nowrap">{{device.sn}}</td>
@@ -155,7 +153,7 @@
                                             </td>
                                             {% if is_granted("ROLE_GOE") %}
                                             <td class="text-center">
-                                            <div class="input-group d-flex flex-nowrap text-break overflow-auto">
+                                            <div class="input-group d-flex flex-nowrap text-break overflow-auto justify-content-center">
                                                 <textarea class="comment_input border border-0" style="background-color:#ffffff; height: 100%;" type="text" name="nm" data-id="{{device.id}}">
                                                 {{device.comment}}
                                                 </textarea>
