--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -127,7 +127,7 @@
                         <tr>
                             <th>{{ 'Upload Version'|trans }} :</th>
                             <td>
-                                <input type="text" 
+                                <input type="text" id="{{device.id}}"
                                     data-id="{{device.id}}" 
                                     name="" value="" 
                                     class="update-zone" 
