--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -451,4 +451,14 @@ table.dataTable thead .sorting_desc_disabled:before {
 .btn-left {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+
+.table-header-first {
+  background-color: #181717;
+  color: #F5F5F5;
+}
+
+.table-header-second {
+  background-color: #767171;
+  color: #F5F5F5;
 }/*# sourceMappingURL=styles.css.map */
