--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -550,3 +550,13 @@ background: #eee;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
+
+.table-header-first {
+    background-color: #181717;
+    color: #F5F5F5;
+}
+
+.table-header-second {
+    background-color: #767171;
+    color: #F5F5F5;
+}
