--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -11,8 +11,8 @@
                 <h3 class="card-header w-100"><div class="text-muted" style="text-transform: uppercase;">Devices</div></h3>
                 <div class="card-body d-flex flex-column justify-content-top w-100 h-100 p-0 py-4">
                     <canvas id="myChart" class="text-start"></canvas>
+                    {#{{ render_chart(thirdChart) }}#}
                 </div>
-                
                 <div id="total_count" style="display: none;">{{countDevices}}</div>
             </div>
         </div>
@@ -25,9 +25,6 @@
                 <div class="carousel-inner" style="box-shadow: 0px 0px 2px 2px #acabab81; border-radius: 5px;">
                     {% for deviceFamily in devicesFamily %}
                     <div class="carousel-item {{ (deviceFamily=="BACK4") ? 'active' : '' }}">
-                    <!--
-                    <img src="..." class="d-block w-100" alt="...">
-                    -->
                         <div class="card dashboard-card">
                             
                             <h3 class="card-header w-100 device_family text-muted" id="{{deviceFamily}}">{{deviceFamily}}</h3>
