--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,13 +16,13 @@
             {% endfor %}
 
             {{ form_start(registrationForm, {'attr': {'class': 'text-center d-flex flex-column align-items-center justify-content-around login'}}) }}
-                <div class="w-75" style="margin-top: 1em; padding-bottom: 2em;">
+                <div class="w-50" style="margin-top: 1em; padding-bottom: 2em;">
                     <span class="fa-stack fa-3x" style="position: relative; top: -40px;">
                         <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
                         <i class="fa-regular fa-user fa-stack-1x fa-inverse" style="text-shadow: 2px 2px 2px rgba(0,0,0,0.5);"></i>
                     </span>
                     <h2 class="mb-sm-3">{{ 'Register'|trans }}</h2>
-                        <div class="form-outline w-100">
+                        <div class="form-outline">
                             <div class="input-group flex-nowrap">
                                 <span class="input-group-text mb-3" id="addon-wrapping">
                                 <i class="fa-solid fa-user"></i>
@@ -30,7 +30,7 @@
                                 {{ form_row(registrationForm.username, {attr: {placeholder: ( 'Username'|trans ), id: 'username', style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;', class: 'form-control-register'}})}}
                             </div>
                         </div>
-                        <div class="form-outline w-100">
+                        <div class="form-outline">
                             <div class="input-group flex-nowrap">
                                 <span class="input-group-text mb-3" id="addon-wrapping"><i class="fa-solid fa-envelope"></i></span>
                                 {{ form_row(registrationForm.email, {attr: {placeholder: ( 'Email'|trans ), id: 'email', style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;', class: 'form-control-register'}}) }}
@@ -56,14 +56,14 @@
                         </div>
                     <div class="d-flex justify-content-center flex-nowrap">{{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}</div>
 
-                    <button type="submit" class="btn btn-justify txt-white bg-orange btn-outline-orange w-50 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
+                    <button type="submit" class="btn btn-justify txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
 
                     <div class="divider d-flex align-items-center my-3">
                         {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                     </div>
                     <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                         <p class="mb-1 text-nowrap">{{ 'Already registered ?'|trans }}</p>
-                        <a class="btn btn-justify btn-secondary txt-white mb-1 w-50" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
+                        <a class="btn btn-justify btn-secondary txt-white mb-1 w-100" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                     </div>
                 </div>
 
