--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -560,3 +560,7 @@ background: #eee;
     background-color: #767171;
     color: #F5F5F5;
 }
+
+.modal-dialogue-device {
+    --bs-modal-width: 50%;
+}
