--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -1,184 +1,175 @@
 <!-- ===== INFO MODALS ===== -->
 {% for device in devices %}
-    <div class="modal shadow-1 white falling overflow-scroll p-4" id="modal_info_{{device.id}}" data-ax="modal" aria-hidden="true" tabindex="-1">
-        <div class="modal-dialog">
+    <div class="modal modal-device shadow-1 white falling w-100" id="modal_info_{{device.id}}" data-ax="modal" aria-hidden="true" tabindex="-1">
+        <div class="modal-dialog modal-dialogue-device w-100 h-100">
+            <div class="modal-content w-100 h-100">
+                <div class="modal-header">
+                <h5 class="text-center w-100 align-middle">{{ 'Device Info'|trans }}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
 
-
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="text-center w-100 align-middle">{{ 'Device Info'|trans }}</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-
-            <div class="divider"></div>
-            <div class="responsive-table px-4">
-                <table class="table striped">
-                    <tbody>
-                        <tr>
-                            <th>{{ 'Serial Number'|trans }} :</th>
-                            <td>{{device.sn}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Device Type'|trans }} :</th>
-                            <td>{{device.deviceFamily}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Version'|trans }} :</th>
-                            <td>{{device.version}}</td>
-                        </tr>
-                        {# 
-                        <tr>
-                            <th>Upload Version :</th>
-                            <td>{{device.versionUpload}}</td>
-                        </tr>
-                        #} 
-
-                        <tr>
-                            <th>{{ 'IP Address'|trans }} :</th>
-                            <td>{{device.ipAddr}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Country'|trans }} :</th>
-                            <td>{{device.country}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'City'|trans }} :</th>
-                            <td>{{device.city}}</td>
-                        </tr>
-                        {#
-                        <tr>
-                            <th>{{ 'Log Pointer'|trans }} :</th>
-                            <td>{{device.logPointeur}}</td>
-                        </tr>
-                        #}
-                        <tr>
-                            <th>{{ 'Advertising'|trans }} :</th>
-                            <td class="{{(device.pub)? 'device-active': 'device-inactive'}}">
+                <div class="divider"></div>
+                <div class="px-4 pb-5 pt-1 w-100 h-100 d-flex flex-column justify-content-between align-items-stretch">
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Serial Number'|trans }} :</b>
+                            <div>{{device.sn}}</div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Device Type'|trans }} :</b>
+                            <div>{{device.deviceFamily}}</div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Version'|trans }} :</b>
+                            <div>{{device.version}}</div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'IP Address'|trans }} :</b>
+                            <div>{{device.ipAddr}}</div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Country'|trans }} :</b>
+                            <div>{{device.country}}</div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'City'|trans }} :</b>
+                            <div>{{device.city}}</div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Advertising'|trans }} :</b>
+                            <div class="{{(device.pub)? 'device-active': 'device-inactive'}}">
                             {{ (device.pub)? 'Yes': 'No'}}
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'PIN code'|trans }} :</th>
-                            <td>{{device.codePin}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Creation Date'|trans }} :</th>
-                            <td>{{device.createdAt|format_datetime('medium', 'short')}}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Update Date'|trans }} :</th>
-                            <td>{{device.updatedAt|format_datetime('medium', 'short')}}</td>
-                        </tr>
-                        {#
-                        <tr>
-                            <th>{{ 'Server last activity'|trans }} :</th>
-                            <td>{{device.serverDate|format_datetime('medium', 'short')}}</td>
-                        </tr>
-                        #}
-                        <tr>
-                            <th>{{ 'Status'|trans }} :</th>
-                            <td>
-                                <div class="{{(device.isActive)? 'device-active': 'device-inactive'}}">{{(device.isActive)? 'Active':'Inactive'}}</div>
-                            </td>
-                        </tr>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'PIN code'|trans }} :</b>
+                            <div>{{device.codePin}}</div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Creation Date'|trans }} :</b>
+                            <div>{{device.createdAt|format_datetime('medium', 'short')}}</div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Update Date'|trans }} :</b>
+                            <div>{{device.updatedAt|format_datetime('medium', 'short')}}</div>
+                        </div>
+                    </div>
+                    <hr class="hr" />
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Status'|trans }} :</b>
+                            <div class="{{(device.isActive)? 'device-active': 'device-inactive'}}">{{(device.isActive)? 'Active':'Inactive'}}</div>
+                        </div>
                         {% if is_granted("ROLE_SUPER_ADMIN") %}
-                        <tr class="text-center">
-                            <th>{{ 'Connect'|trans }} :</th>
-                            <td>
-                                {% if (device.deviceFamily == "BIOBACK" or device.deviceFamily == "RSHOCK" or device.deviceFamily == "CRYOBACK4") %}
-                                    
-                                    <input class="btn bg-green btn-outline-green connect_button" 
-                                    id="c_sn_{{device.sn}}" 
-                                    data-id="connect_{{device.id}}" 
-                                    name='{{device.sn}}' type="button" value="Connect" 
-                                    data-bs-toggle="modal" data-bs-target="#testAcces_{{device.id}}">
-                                    
-                                    {#
-                                    <a href={{ path('connect', { 'id': device.id }) }} class="btn bg-green btn-outline-green connect_command" 
-                                    id="c_sn_{{device.sn}}" 
-                                    data-id="connect_{{device.id}}" 
-                                    name='{{device.sn}}' type="button" value="Connect"></a>
-                                    #}
-                                {% endif %}
-                            </td>
-                        </tr>
+                        <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
+                            <b>{{ 'Connect'|trans }} :</b>
+                            {% if (device.deviceFamily == "BIOBACK" or device.deviceFamily == "RSHOCK" or device.deviceFamily == "CRYOBACK4") %}
+                                <input class="btn bg-green btn-outline-green connect_button w-75" 
+                                id="c_sn_{{device.sn}}" 
+                                data-id="connect_{{device.id}}" 
+                                name='{{device.sn}}' type="button" value="Connect" 
+                                data-bs-toggle="modal" data-bs-target="#testAcces_{{device.id}}">
+                            {% endif %}
+                        </div>
                         {% endif %}
+                    </div>
+                    <hr class="hr" />
 
-                        {% if is_granted("ROLE_GOE")%}
-                        
-                        <tr>
-                            <th>{{ 'Forced'|trans }} :</th>
-                            <td>
-                                <!--
-                                <a href="#" class="form-field form-default"
-                                    data-target="modal_forced_{{device.id}}"
-                                    data-id="forced_{{device.id}}"
-                                    data-title="{{device.sn}}">
-                                    <label class="form-switch mt-2">
-                                    <input type="checkbox" 
-                                    {{ (device.forced)? 'checked': ''}} 
+                    {% if is_granted("ROLE_GOE")%}
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <div class="d-flex flex-column justify-content-left">
+                            <b>{{ 'Upload Version'|trans }} :</b>
+                            <div>
+                                <input type="text"
                                     data-id="{{device.id}}" 
-                                    name="switchbox" 
-                                    onblur="this.value=''">
-                                    <span class="slider"></span>
-                                    </label>
-                                </a>
-                                -->
+                                    name="" value="" 
+                                    id="update_{{device.id}}"
+                                    class="update-zone" style='width:12em;'>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-nowrap justify-content-left align-self-stretch align-items-center">
+                            <b class="me-1">{{ 'Forced'|trans }} :</b>
+                            <div>
                                 <input type="checkbox" 
                                 id="forced_{{device.id}}"
                                 {{ (device.forced)? 'checked': ''}} 
                                 data-id="{{device.id}}" 
                                 name="switchbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Upload Version'|trans }} :</th>
-                            <td>
-                                {#
-                                <input type="text" id="{{device.id}}"
-                                    data-id="{{device.id}}" 
-                                    name="" value=""
-                                    class="update-zone" 
-                                    onblur="this.value=''">
-                                #}
+                            </div>
+                        </div>
+
+                    </div>
+                    {% if is_granted("ROLE_GOE")%}
+                    <div class="text-end w-100">
+                        <button type="button"
+                        class="update btn btn-dark red shadow-1 rounded-1 small valid-buttons"  
+                        name="{{device.id}}">{{ 'Validate'|trans }}
+                        </button>
+                    </div>
+                    {% endif %}
+                    <hr class="hr" />
+                        {% if is_granted("ROLE_ADMIN")%}
+                        <div class="d-flex justify-content-between w-100">
+                            <div class="d-flex flex-column justify-content-left">
+                                <b>{{ 'Server IP'|trans }}</b>
                                 <input type="text"
-                                    data-id="{{device.id}}" 
-                                    name="" value="" 
-                                    id="update_{{device.id}}"
-                                    class="update-zone">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>{{ 'Change Server'|trans }}</th>
-                            <td>
-                            {{device.serverId}}
-                            </td>
-                        </tr>
-                        
+                                data-id="{{device.id}}" 
+                                name="" value="{{device.serverIp}}" 
+                                id="server_ip_{{device.id}}"
+                                class="server_ip-zone" style='width:12em;'>
+                            </div>
+                            <div class="d-flex flex-column justify-content-left">
+                                <b>{{ 'Server Port'|trans }}</b>
+                                <input type="text"
+                                data-id="{{device.id}}" 
+                                name="" value="{{device.serverPort}}" 
+                                id="server_port_{{device.id}}"
+                                class="server_port-zone" style='width:12em;'>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-between w-100">
+                            <div class="d-flex justify-content-left flex-nowrap align-items-center align-self-stretch">
+                                <b class="me-1">{{ 'Server ID'|trans }}</b>
+                                <input type="checkbox" 
+                                id="server_id_{{device.id}}"
+                                {{ (device.serverId)? 'checked': ''}} 
+                                data-id="{{device.id}}" 
+                                name="switchbox">
+                            </div>
+                            <button type="button"
+                            class="update btn btn-dark red shadow-1 rounded-1 small server-buttons"  
+                            name="{{device.id}}">{{ 'Validate'|trans }}
+                            </button>
+                        </div>
+                        {% elseif is_granted("ROLE_GOE")%}
+                        <div class="d-flex justify-content-between align-items-center w-100">
+                            <div>
+                                <b>{{ 'Server IP'|trans }}</b>
+                                <div>
+                                {{device.serverIp}}
+                                </div>
+                            </div>
+                            <div>
+                                <b>{{ 'Server Port'|trans }}</b>
+                                <div>
+                                {{device.serverPort}}
+                                </div>
+                            </div>
+                        </div>
                         {% endif %}
-                    </tbody>
-                </table>
-                
-            </div>
-            <div class="divider"></div>
-            <div class="modal-footer">
-                {% if is_granted("ROLE_GOE")%}
-                <div>
-                    <!--
-                    <a href="" 
-                    class="update btn btn-dark red shadow-1 rounded-1 small" 
-                    id="update_{{device.id}}" 
-                    name="validate">{{ 'Validate'|trans }}
-                    </a>
-                    -->
-                    <button type="button"
-                    class="update btn btn-dark red shadow-1 rounded-1 small valid-buttons"  
-                    name="{{device.id}}">{{ 'Validate'|trans }}
-                    </button>
+                    
+                    {% endif %}
+                    
                 </div>
-                {% endif %}
             </div>
-        </div>
         </div>
     </div>
 
